--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="inner">
-            <h1><a href="#">DCODLAB</a></h1>
+            <h1><a href="#">休息</a></h1>
             <ul id="gnb">
                 <li><a href="#">DEPARTMENT</a></li>
                 <li><a href="#">GALLERY</a></li>
