--- a/index.html
+++ b/index.html
@@ -1,22 +1,55 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/fed32f677e.js" crossorigin="anonymous"></script>
+    <script src="js/jquery-1.12.3.js"></script>
+    <script src="js/main.js"></script>
 </head>
+
 <body>
     <header>
         <div class="inner">
-            <h1><a href="#">休息</a></h1>
+            <h1><a href="#"><img src="img/logo.png" alt="logo"></a></h1>
             <ul id="gnb">
-                <li><a href="#">DEPARTMENT</a></li>
-                <li><a href="#">GALLERY</a></li>
-                <li><a href="#">YOUTUBE</a></li>
-                <li><a href="#">COMMUNITY</a></li>
-                <li><a href="#">LOCATION</a></li>
+                <li><a href="#">정신건강정보</a>
+                    <ul class="submenu">
+                        <li><a href="#">조현병</a></li>
+                        <li><a href="#">불안장애</a></li>
+                        <li><a href="#">우울장애</a></li>
+                        <li><a href="#">양극성장애</a></li>
+                        <li><a href="#">ADHD</a></li>
+                        <li><a href="#">자살예방</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">자가검진</a>
+                    <ul class="submenu">
+                        <li><a href="#">우울</a></li>
+                        <li><a href="#">스트레스</a></li>
+                        <li><a href="#">자살생각</a></li>
+                        <li><a href="#">양극성장애</a></li>
+                        <li><a href="#">인터넷게임중독</a></li>
+                        <li><a href="#">알코올중독</a></li>
+                        <li><a href="#">불안</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">정서관리프로그램</a>
+                    <ul class="submenu">
+                        <li><a href="#">마음챙김명상</a></li>
+                        <li><a href="#">점진적근육이완법</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">소통</a>
+                    <ul class="submenu">
+                        <li><a href="#">공지사항</a></li>
+                        <li><a href="#">Q & A</a></li>
+                    </ul>
+                </li>
+
             </ul>
             <ul class="util">
                 <li><a href="#">Contact</a></li>
@@ -46,28 +79,32 @@
                         <img src="img/news1.jpg" alt="1번 콘텐츠 이미지">
                     </div>
                     <h2><a href="#">Lorem ipsum dolor sit.</a></h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae minus, eaque corrupti vero ad maiores!</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae minus, eaque corrupti vero ad
+                        maiores!</p>
                 </article>
                 <article>
                     <div class="pic">
                         <img src="img/news2.jpg" alt="2번 콘텐츠 이미지">
                     </div>
                     <h2><a href="#">Lorem ipsum dolor sit.</a></h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae minus, eaque corrupti vero ad maiores!</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae minus, eaque corrupti vero ad
+                        maiores!</p>
                 </article>
                 <article>
                     <div class="pic">
                         <img src="img/news3.jpg" alt="3번 콘텐츠 이미지">
                     </div>
                     <h2><a href="#">Lorem ipsum dolor sit.</a></h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae minus, eaque corrupti vero ad maiores!</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae minus, eaque corrupti vero ad
+                        maiores!</p>
                 </article>
                 <article>
                     <div class="pic">
                         <img src="img/news4.jpg" alt="4번 콘텐츠 이미지">
                     </div>
                     <h2><a href="#">Lorem ipsum dolor sit.</a></h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae minus, eaque corrupti vero ad maiores!</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae minus, eaque corrupti vero ad
+                        maiores!</p>
                 </article>
             </div>
         </div>
@@ -95,4 +132,5 @@
         </div>
     </footer>
 </body>
+
 </html>
