--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <header>
         <div class="inner">
             <h1><a href="#"><img src="img/logo.png" alt="logo"></a></h1>
+            <div class="menubg"></div>
             <ul id="gnb">
                 <li><a href="#">정신건강정보</a>
                     <ul class="submenu">
