--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
         </div>
     </header>
     <figure>
-        <video src="img/visual.mp4" autoplay muted loop></video>
+        <video src="img/129423 (360p).mp4" autoplay muted loop></video>
         <div class="inner">
-            <h1>INNOVATION</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br>
-                Id praesentium molestias similique quaerat magni facere in a? Adipisci, possimus reprehenderit!
+            <h1>MEDITATION</h1>
+            <p>활기찬 하루의 시작 <br>
+                평온한 하루의 마무리
             </p>
-            <a href="#">view detail</a>
+  
         </div>
     </figure>
     <section>
