--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://kit.fontawesome.com/fed32f677e.js" crossorigin="anonymous"></script>
     <script src="js/jquery-1.12.3.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/owl.carousel.js"></script>
 </head>
 
 <body>
@@ -53,16 +54,17 @@
 
             </ul>
             <ul class="util">
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Help</a></li>
-                <li><a href="#">Login</a></li>
-                <li><a href="#">Join</a></li>
-                <li><a href="#">Sitemap</a></li>
+                <li><a href="#"><i class="fab fa-instagram-square"></i></a></li>
+                <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
+                <li><a href="#"><i class="fab fa-twitter-square"></i></a></li>
             </ul>
         </div>
     </header>
     <figure>
-        <video src="img/129423 (360p).mp4" autoplay muted loop></video>
+        <div class="owl-carousel">
+            <video src="img/129423 (360p).mp4" autoplay muted loop></video>
+        </div>
+        
         <div class="inner">
             <h1>MEDITATION</h1>
             <p>활기찬 하루의 시작 <br>
@@ -73,39 +75,101 @@
     </figure>
     <section>
         <div class="inner">
-            <h1>RECENT NEWS</h1>
+            <h1>공지사항</h1>
+            <div class="wrap">
+                <ul>
+                    <li><a href="#">정신건강센터 정상운영</a><span>2023.08.05</span></li>
+                    <li><a href="#">정신건강센터 정상운영</a><span>2023.08.05</span></li>
+                    <li><a href="#">정신건강센터 정상운영</a><span>2023.08.05</span></li>
+                    <li><a href="#">정신건강센터 정상운영</a><span>2023.08.05</span></li>
+                    <li><a href="#">정신건강센터 정상운영</a><span>2023.08.05</span></li>
+                    <li><a href="#">정신건강센터 정상운영</a><span>2023.08.05</span></li>
+                </ul>
+            </div>
+         </div>
+    </section>
+    <section>
+        <div class="inner">
+            <h1>질환별 정보</h1>
             <div class="wrap">
                 <article>
                     <div class="pic">
                         <img src="img/news1.jpg" alt="1번 콘텐츠 이미지">
                     </div>
-                    <h2><a href="#">Lorem ipsum dolor sit.</a></h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae minus, eaque corrupti vero ad
-                        maiores!</p>
+                    <h2><a href="#">조현병</a></h2>
                 </article>
                 <article>
                     <div class="pic">
                         <img src="img/news2.jpg" alt="2번 콘텐츠 이미지">
                     </div>
-                    <h2><a href="#">Lorem ipsum dolor sit.</a></h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae minus, eaque corrupti vero ad
-                        maiores!</p>
+                    <h2><a href="#">불안장애</a></h2>
                 </article>
                 <article>
                     <div class="pic">
                         <img src="img/news3.jpg" alt="3번 콘텐츠 이미지">
                     </div>
-                    <h2><a href="#">Lorem ipsum dolor sit.</a></h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae minus, eaque corrupti vero ad
-                        maiores!</p>
+                    <h2><a href="#">우울장애</a></h2>
                 </article>
                 <article>
                     <div class="pic">
                         <img src="img/news4.jpg" alt="4번 콘텐츠 이미지">
                     </div>
-                    <h2><a href="#">Lorem ipsum dolor sit.</a></h2>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae minus, eaque corrupti vero ad
-                        maiores!</p>
+                    <h2><a href="#">양극성장애</a></h2>
+                </article>
+                <article>
+                    <div class="pic">
+                        <img src="img/news4.jpg" alt="4번 콘텐츠 이미지">
+                    </div>
+                    <h2><a href="#">ADHD</a></h2>
+                </article>
+                <article>
+                    <div class="pic">
+                        <img src="img/news4.jpg" alt="4번 콘텐츠 이미지">
+                    </div>
+                    <h2><a href="#">자살예방</a></h2>
+                </article>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="inner">
+            <h1>자가 검진</h1>
+            <div class="wrap">
+                <article>
+                    <div class="pic">
+                        <img src="img/news1.jpg" alt="1번 콘텐츠 이미지">
+                    </div>
+                    <h2><a href="#">조현병</a></h2>
+                </article>
+                <article>
+                    <div class="pic">
+                        <img src="img/news2.jpg" alt="2번 콘텐츠 이미지">
+                    </div>
+                    <h2><a href="#">불안장애</a></h2>
+                </article>
+                <article>
+                    <div class="pic">
+                        <img src="img/news3.jpg" alt="3번 콘텐츠 이미지">
+                    </div>
+                    <h2><a href="#">우울장애</a></h2>
+                </article>
+                <article>
+                    <div class="pic">
+                        <img src="img/news4.jpg" alt="4번 콘텐츠 이미지">
+                    </div>
+                    <h2><a href="#">양극성장애</a></h2>
+                </article>
+                <article>
+                    <div class="pic">
+                        <img src="img/news4.jpg" alt="4번 콘텐츠 이미지">
+                    </div>
+                    <h2><a href="#">ADHD</a></h2>
+                </article>
+                <article>
+                    <div class="pic">
+                        <img src="img/news4.jpg" alt="4번 콘텐츠 이미지">
+                    </div>
+                    <h2><a href="#">자살예방</a></h2>
                 </article>
             </div>
         </div>
@@ -113,7 +177,7 @@
     <footer>
         <div class="inner">
             <div class="upper">
-                <h1>DCODELAB</h1>
+                <h1>WHEW</h1>
                 <ul>
                     <li><a href="#">Policy</a></li>
                     <li><a href="#">Terms</a></li>
@@ -123,11 +187,10 @@
             </div>
             <div class="lower">
                 <address>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, facere. <br>
-                    TEL : 031-111-1234 C.P:010-1234-5678
+                    lyrickor@gmail.com
                 </address>
                 <p>
-                    2020 DCODELAB &COPY; COPYRIGHT ALL RIGHTS RESERVED.
+                    2023 WHEW &COPY; COPYRIGHT ALL RIGHTS RESERVED.
                 </p>
             </div>
         </div>
