--- a/index.html
+++ b/index.html
@@ -94,37 +94,37 @@
             <div class="wrap">
                 <article>
                     <div class="pic">
-                        <img src="img/news1.jpg" alt="1번 콘텐츠 이미지">
+                        <img src="img/schizophrenia.jpeg" alt="1번 콘텐츠 이미지">
                     </div>
                     <h2><a href="#">조현병</a></h2>
                 </article>
                 <article>
                     <div class="pic">
-                        <img src="img/news2.jpg" alt="2번 콘텐츠 이미지">
+                        <img src="img/anxiety disorder1.jpeg" alt="2번 콘텐츠 이미지">
                     </div>
                     <h2><a href="#">불안장애</a></h2>
                 </article>
                 <article>
                     <div class="pic">
-                        <img src="img/news3.jpg" alt="3번 콘텐츠 이미지">
+                        <img src="img/depression.png" alt="3번 콘텐츠 이미지">
                     </div>
                     <h2><a href="#">우울장애</a></h2>
                 </article>
                 <article>
                     <div class="pic">
-                        <img src="img/news4.jpg" alt="4번 콘텐츠 이미지">
+                        <img src="img/bipolar disorder.png" alt="4번 콘텐츠 이미지">
                     </div>
                     <h2><a href="#">양극성장애</a></h2>
                 </article>
                 <article>
                     <div class="pic">
-                        <img src="img/news4.jpg" alt="4번 콘텐츠 이미지">
+                        <img src="img/adhd.jpeg" alt="4번 콘텐츠 이미지">
                     </div>
                     <h2><a href="#">ADHD</a></h2>
                 </article>
                 <article>
                     <div class="pic">
-                        <img src="img/news4.jpg" alt="4번 콘텐츠 이미지">
+                        <img src="img/suicidal ideation.jpeg" alt="4번 콘텐츠 이미지">
                     </div>
                     <h2><a href="#">자살예방</a></h2>
                 </article>
