게시판작업

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="inner">
-            <h1><a href="#"><img src="img/logo.png" alt="logo"></a></h1>
+            <h1><a href="index.html"><img src="img/logo.png" alt="logo"></a></h1>
             <div class="menubg"></div>
             <ul id="gnb">
                 <li><a href="#">정신건강정보</a>
@@ -73,7 +73,7 @@
   
         </div>
     </figure>
-    <section>
+    <!-- <section>
         <div class="inner">
             <h1>공지사항</h1>
             <div class="wrap">
@@ -87,16 +87,16 @@
                 </ul>
             </div>
          </div>
-    </section>
+    </section> -->
     <section>
         <div class="inner">
             <h1>질환별 정보</h1>
             <div class="wrap">
                 <article>
                     <div class="pic">
-                        <img src="img/schizophrenia.jpeg" alt="1번 콘텐츠 이미지">
+                       <a href="schizophrenia.html"><img src="img/schizophrenia.jpeg" alt="1번 콘텐츠 이미지"></a> 
                     </div>
-                    <h2><a href="#">조현병</a></h2>
+                    <h2><a href="schizophrenia.html">조현병</a></h2>
                 </article>
                 <article>
                     <div class="pic">
