--- a/adhd.html
+++ b/adhd.html
@@ -119,34 +119,43 @@
         </div>
     </section>
     <div>
-        대개 초등학교 저 학년 때 증상이 발현되며 여아보다 약 3~5%정도로 남아에서 빈번하게 나타납니다. ADHD의 대표적인 증상으로는 주의가 산만하고 과잉행동들을 보입니다. 또한, 자극에 민감하게 반응하여 소음이나 온도 및 환경변화에 예민한 모습을 보이고 잠을 잘 자려고 하지 않으며 자주 화를 내거나 우는 등 불안정한 정서들도 관찰됩니다. 만 3세 이전에는 기질적으로 다소 주의산만하고 과잉행동이 있을 수 있기 때문에 유치원 및 초등학교 입학 후에 단체활동 시 이러한 문제가 두드러질 때 ADHD로 진단을 내립니다. ADHD는 틱 장애와 동반되는 경우가 40%정도가 되며 강박장애가 동반되기도 합니다.
-
-        원인
-        심리적 원인
-미세한 뇌손상으로 인한 뇌기능 저하, 뇌 속의 신경전달 물질로 인한 기능장애로 발생. 뇌의 정상발달 과정상의 뇌 성숙 지연 등으로 발생됩니다.
-유전적 원인
-ADHD가 있는 부모의 자녀가 정상적인 부모의 자녀보다 30~40% 높게 나타납니다.
-사회ㆍ심리적 원인
-사회적 스트레스, 가정불화, 불안, 감정박탈 등 심리학적 원인으로 발생이 되기도 합니다.
-증상
-주의 집중력 저하
-다른 사람이 말하는 것을 귀 기울여 듣지 않고 금방 들은 것도 잘 기억하지 못하며 외부의 작은 자극에도 정신이 흩어져 쉽게 주의가 산만해지게 됩니다. 또한, 숙제 등 자신이 해야 할 일을 잘 잊고 연필, 책, 준비물 등 물건을 자주 잃어버리며 일부러 안하는 것이 아님에도 불구하고 지시대로 잘 따라하지 못하고 시간 내에 해야하는 과제나 간단한 일도 끝내지 못하는 경우가 많습니다.
-과잉행동
-수업교실이나 다른 장소에서 차분히 않아 있지 못하고 손발을 만지작거리거나 몸을 뒤틀며 놀이 시에는 조용하게 놀거나 즐기지 못하고 끊임없이 몸을 움직이고 잠시도 가만히 있지 못하며 말을 지나치게 많이 하며 쓸데없는 질문도 많이 합니다.
-충동성
-질문이 다 끝나기도 전에 불쑥 대답을 하거나 자신의 차례를 잘 기다리지 못합니다. 다른 사람이 하는 것에 대해 불쑥 끼어들어 참견하거나 방해를 하고 간섭을 하기도 합니다.
-치료
-약물치료
-과잉행동의 감소, 주의 집중시간이 증가, 충동적인 행동의 감소 등에 모두 효과를 기대할 수 있으며 눈에 띄게 학습능력이 향상되고 조용해지는 모습들을 볼 수 있습니다. 약물치료를 받은 ADHD아동 중 80% 이상에서 호전된 반응을 보였습니다.
-사회성 증진 집단치료
-주의력 결핍 아동은 대체로 사회성이 저하되어 나이에 비해 어리게 행동하는 경향이 있으며 대인관계 기술이 부족하기 때문에 사회성 증진 집단치료를 통해 대인관계 및 사회기술을 습득할 수 있도록 훈련시켜 실제 생활에 적용하도록 돕습니다.
-부모, 가족 상담
-부모, 자녀 관계의 문제가 원인이 되어 주의력 결핍 및 과잉행동장애가 생기지는 않으나 아동의 지속적인 문제행동으로 인하여 이차적으로 부모, 자녀관계가 악화될 수 있으며 또한 ADHD 증상이 더 악화가 될 수 있기 때문에 부모를 포함한 가족 상담이 필요합니다.
-행동치료
-문제행동의 목록을 만들어 부모와 아동 사전에 약속된 규칙을 바탕으로 아동의 행동에 따라 상벌을 적절히 줌으로써 일상생활의 행동을 본인 스스로 조절할 수 있도록 돕습니다.
-환경치료
-주의력 결핍 및 과잉행동장애 아동들은 자극에 민감하게 반응하기 때문에 주변 환경을 단순하고 차분하게 만들어 주는 것이 좋습니다. 정적인 활동보다는 태권도 및 수영처럼 전신활동을 함으로써 아동의 행동이 많이 차분해지고 증상도 호전되는 것을 경험할 수 있게됩니다.
-
+        <div class="summary">
+            <h3>ADHD</h3>
+            대개 초등학교 저 학년 때 증상이 발현되며 여아보다 약 3~5%정도로 남아에서 빈번하게 나타납니다. ADHD의 대표적인 증상으로는 주의가 산만하고 과잉행동들을 보입니다. 또한, 자극에 민감하게 반응하여 소음이나 온도 및 환경변화에 예민한 모습을 보이고 잠을 잘 자려고 하지 않으며 자주 화를 내거나 우는 등 불안정한 정서들도 관찰됩니다. 만 3세 이전에는 기질적으로 다소 주의산만하고 과잉행동이 있을 수 있기 때문에 유치원 및 초등학교 입학 후에 단체활동 시 이러한 문제가 두드러질 때 ADHD로 진단을 내립니다. ADHD는 틱 장애와 동반되는 경우가 40%정도가 되며 강박장애가 동반되기도 합니다.
+        </div>
+        <hr>
+        <div class="cause">
+                <h3>원인</h3>
+                심리적 원인
+                미세한 뇌손상으로 인한 뇌기능 저하, 뇌 속의 신경전달 물질로 인한 기능장애로 발생. 뇌의 정상발달 과정상의 뇌 성숙 지연 등으로 발생됩니다.
+                유전적 원인
+                ADHD가 있는 부모의 자녀가 정상적인 부모의 자녀보다 30~40% 높게 나타납니다.
+                사회ㆍ심리적 원인
+                사회적 스트레스, 가정불화, 불안, 감정박탈 등 심리학적 원인으로 발생이 되기도 합니다.
+        </div>
+        <hr>
+        <div class="symptom">
+            <h3>증상</h3>
+            주의 집중력 저하
+            다른 사람이 말하는 것을 귀 기울여 듣지 않고 금방 들은 것도 잘 기억하지 못하며 외부의 작은 자극에도 정신이 흩어져 쉽게 주의가 산만해지게 됩니다. 또한, 숙제 등 자신이 해야 할 일을 잘 잊고 연필, 책, 준비물 등 물건을 자주 잃어버리며 일부러 안하는 것이 아님에도 불구하고 지시대로 잘 따라하지 못하고 시간 내에 해야하는 과제나 간단한 일도 끝내지 못하는 경우가 많습니다.
+            과잉행동
+            수업교실이나 다른 장소에서 차분히 않아 있지 못하고 손발을 만지작거리거나 몸을 뒤틀며 놀이 시에는 조용하게 놀거나 즐기지 못하고 끊임없이 몸을 움직이고 잠시도 가만히 있지 못하며 말을 지나치게 많이 하며 쓸데없는 질문도 많이 합니다.
+            충동성
+            질문이 다 끝나기도 전에 불쑥 대답을 하거나 자신의 차례를 잘 기다리지 못합니다. 다른 사람이 하는 것에 대해 불쑥 끼어들어 참견하거나 방해를 하고 간섭을 하기도 합니다.
+        </div>
+        <div class="treatment">
+            <h3>치료</h3>
+            약물치료
+            신체 자율신경계의 균형이나 뇌신경전달물질의 이상으로 불안장애가 올 수 있다는 원인론에 비추어 볼 때 그것에 해당하는 약물치료가 우선적으로 중요합니다.
+            인지치료
+            잘못된 고정관념을 교정하는 것을 목표로 하는 치료방법입니다. 사람은 생각이 바뀌면 감정도 바뀌기 때문에 과도한 불안도 교정이 될 수 있습니다.
+            행동요법
+            주로 공포증(고소공포증, 동물 고포증, 폐쇄공포증 등)의 치료에 사용됩니다. 이완훈련을 동반한 탈감작법, 실제상황에 노출시키면서 치료하는 노출훈련법, 혐오자극법 등의 치료 방법이 있습니다.
+            개인정신치료
+            심층정신치료를 통해 불안의 무의식적인 근원을 찾아볼 수 있으며, 현실의 문제 위주로 지지 정신치료를 할 수도 있습니다.
+            그룹정신치료
+            일반적으로 인지치료를 5~10명 정도가 함께하는 경우를 말합니다. 성공적인 경험을 나눌수도 있고 지지그룹이 형성되어 좋은 효과를 기대할 수 있습니다.
+        </div>
     </div>
    
     <footer>
