--- a/anxiety.html
+++ b/anxiety.html
@@ -119,23 +119,31 @@
         </div>
     </section>
     <div>
-        불안(anxiety)이란 광범위하게 매우 불쾌한, 그리고 막연히 불안한 느낌으로 익숙하지 않은 환경에 적응하고자 할 때 나타나는 가장 기본적인 반응양상입니다. 그와 관련된 감정적 증상, 신체적 증상, 생각으로 나타나는 증상과 행동으로 보이는 증상 등이 나타납니다.
+        <div class="summary">
+            <h3>불안장애</h3>
+            불안(anxiety)이란 광범위하게 매우 불쾌한, 그리고 막연히 불안한 느낌으로 익숙하지 않은 환경에 적응하고자 할 때 나타나는 가장 기본적인 반응양상입니다. 그와 관련된 감정적 증상, 신체적 증상, 생각으로 나타나는 증상과 행동으로 보이는 증상 등이 나타납니다.
+        </div>
+        <hr>
+        <div class="cause">
+                <h3>원인</h3>
+                심리적 원인
+                불안은 세상을 살면서 여러 가지 경험을 통해 학습된 것인데 그 대상이 눈에 잘 보이지 않고 심리적인 갈등을 야기 시키게 됩니다. 예를 들어 대중 앞에서 심하게 긴장되고 떨렸던 경험이 이후에 비슷한 상황에서도 불안이 심해지는 경우를 말합니다.
+                생물학적 원인
+                자율신경계의 이상과 뇌신경전달물질(노르에피네프린, 세로토닌 등)의 불균형이 불안을 야기할 수 있습니다.
+        </div>
+        <hr>
+        <div class="symptom">
+            <h3>증상</h3>
+            감정으로 나타나는 불안증상
+            안절부절 못함, 짜증을 잘 내고 예민함
+            마음이 긴장되고 쉽게 편안하지 않음, 극심한 불안(공항)
+            신체적 불안증상
+            심장이 빨리 뛴다, 소화가 안되거나 설사와 변비가 올 수 있다.
+            손에 땀이 난다, 손이나 몸이 떨린다, 손발이 차다, 근육이 긴장과 그로 인해서 두통이 올 수 있다.
+            불안증상
+            행동으로 나타나는 불안이 일어날만한 상황을 피한다.
 
-        원인
-        심리적 원인
-불안은 세상을 살면서 여러 가지 경험을 통해 학습된 것인데 그 대상이 눈에 잘 보이지 않고 심리적인 갈등을 야기 시키게 됩니다. 예를 들어 대중 앞에서 심하게 긴장되고 떨렸던 경험이 이후에 비슷한 상황에서도 불안이 심해지는 경우를 말합니다.
-생물학적 원인
-자율신경계의 이상과 뇌신경전달물질(노르에피네프린, 세로토닌 등)의 불균형이 불안을 야기할 수 있습니다.
-증상
-감정으로 나타나는 불안증상
-안절부절 못함, 짜증을 잘 내고 예민함
-마음이 긴장되고 쉽게 편안하지 않음, 극심한 불안(공항)
-신체적 불안증상
-심장이 빨리 뛴다, 소화가 안되거나 설사와 변비가 올 수 있다.
-손에 땀이 난다, 손이나 몸이 떨린다, 손발이 차다, 근육이 긴장과 그로 인해서 두통이 올 수 있다.
-불안증상
-행동으로 나타나는 불안이 일어날만한 상황을 피한다.
-종류
+            종류
 사회(대인) 공포증
 낯선 사람과 이야기하거나, 다른 사람들 앞에서 연설을 하는 등의 사회적 상황에 대한 두려움과 불안이 있어서 그런 상황을 가능한 피해야 합니다.
 공황장애
@@ -146,18 +154,20 @@
 교통사고와 같은 생명에 위험을 줄 수 있는 큰 사건을 경험하고 나서 불안해져서 잠자기 힘들고, 쉽게 짜증을 내고, 집중이 안됩니다.
 범 불안 장애
 특정 상황에 국한되지 않는 지속적이고, 광범위한 불안이 있습니다. 항상 불안하고 걱정이 많아서 긴장한 상태가 계속됩니다. 이러한 긴장 상태 때문에 뒷목이 당기듯이 아픈 긴장성 두통이나 소화불량 등의 신체적 증상이 같이 나타나는 경우가 있습니다.
-치료
-약물치료
-신체 자율신경계의 균형이나 뇌신경전달물질의 이상으로 불안장애가 올 수 있다는 원인론에 비추어 볼 때 그것에 해당하는 약물치료가 우선적으로 중요합니다.
-인지치료
-잘못된 고정관념을 교정하는 것을 목표로 하는 치료방법입니다. 사람은 생각이 바뀌면 감정도 바뀌기 때문에 과도한 불안도 교정이 될 수 있습니다.
-행동요법
-주로 공포증(고소공포증, 동물 고포증, 폐쇄공포증 등)의 치료에 사용됩니다. 이완훈련을 동반한 탈감작법, 실제상황에 노출시키면서 치료하는 노출훈련법, 혐오자극법 등의 치료 방법이 있습니다.
-개인정신치료
-심층정신치료를 통해 불안의 무의식적인 근원을 찾아볼 수 있으며, 현실의 문제 위주로 지지 정신치료를 할 수도 있습니다.
-그룹정신치료
-일반적으로 인지치료를 5~10명 정도가 함께하는 경우를 말합니다. 성공적인 경험을 나눌수도 있고 지지그룹이 형성되어 좋은 효과를 기대할 수 있습니다.
-
+        </div>
+        <div class="treatment">
+            <h3>치료</h3>
+            약물치료
+            신체 자율신경계의 균형이나 뇌신경전달물질의 이상으로 불안장애가 올 수 있다는 원인론에 비추어 볼 때 그것에 해당하는 약물치료가 우선적으로 중요합니다.
+            인지치료
+            잘못된 고정관념을 교정하는 것을 목표로 하는 치료방법입니다. 사람은 생각이 바뀌면 감정도 바뀌기 때문에 과도한 불안도 교정이 될 수 있습니다.
+            행동요법
+            주로 공포증(고소공포증, 동물 고포증, 폐쇄공포증 등)의 치료에 사용됩니다. 이완훈련을 동반한 탈감작법, 실제상황에 노출시키면서 치료하는 노출훈련법, 혐오자극법 등의 치료 방법이 있습니다.
+            개인정신치료
+            심층정신치료를 통해 불안의 무의식적인 근원을 찾아볼 수 있으며, 현실의 문제 위주로 지지 정신치료를 할 수도 있습니다.
+            그룹정신치료
+            일반적으로 인지치료를 5~10명 정도가 함께하는 경우를 말합니다. 성공적인 경험을 나눌수도 있고 지지그룹이 형성되어 좋은 효과를 기대할 수 있습니다.
+        </div>
     </div>
    
     <footer>
