--- a/bipolar.html
+++ b/bipolar.html
@@ -119,23 +119,32 @@
         </div>
     </section>
     <div>
-        조울증은 조증 혹은 경조증과 우울증이 동반된 기분장애를 말하며 진단 시에는 양극성 장애라고 합니다.
-        ‘조증’이란 평상시와는 달리 기분이 좋고, 즐겁고, 고양된 상태를 말하며 잘 아는 사람이 볼 때 이러한 기분상태가 지나치다는 것을 알게 됩니다.
-원인
-뇌의 전달물질인 노에피네프린, 도파민, 그리고 5-HIAA라는 물질이 조울증과 관련이 있다고 합니다.
-증상
-지나친 자신감이나 과대사고, 수면 욕구의 감소, 지나치게 말이 많음
-생각의 속도와 양이 지나치게 빠르고 많음
-주의집중이 안됨, 지나치게 증가된 활동이나 정신운동성, 초조
-즐거움을 추구하는 행동에 지나치게 몰두함
-치료
-약물치료
-기분조절제들은 급성기 뿐만이 아니라 재발을 방지하는데도 효과가 있습니다. 최근 연구에 따르면 리튬, 발프로에이트 등은 신경세포를 재생해 주고 보호도 해주는 것으로 밝혀지고 있습니다. 그러나 약을 복용하더라도 약의 용량이 부족하거나 스트레스가 심하면 재발하는 경우도 있습니다.
-인지치료
-자신과 주변에서 일어나는 일들을 부적절하게 받아들이거나 처리하는 경향이 있습니다. 이를 교정함으로써 자신과 다른 사람, 외부 세계를 합리적으로 인식하고 대처하도록 교정하는 것이 인지치료입니다.
-
+        <div class="summary">
+            <h3>조울증</h3>
+            조울증은 조증 혹은 경조증과 우울증이 동반된 기분장애를 말하며 진단 시에는 양극성 장애라고 합니다.
+            ‘조증’이란 평상시와는 달리 기분이 좋고, 즐겁고, 고양된 상태를 말하며 잘 아는 사람이 볼 때 이러한 기분상태가 지나치다는 것을 알게 됩니다.
+        </div>
+        <hr>
+        <div class="cause">
+                <h3>원인</h3>
+            뇌의 전달물질인 노에피네프린, 도파민, 그리고 5-HIAA라는 물질이 조울증과 관련이 있다고 합니다.
+            증상
+            지나친 자신감이나 과대사고, 수면 욕구의 감소, 지나치게 말이 많음
+            생각의 속도와 양이 지나치게 빠르고 많음
+            주의집중이 안됨, 지나치게 증가된 활동이나 정신운동성, 초조
+            즐거움을 추구하는 행동에 지나치게 몰두함
+        </div>
+        <hr>
+        <div class="treatment">
+            <h3>치료</h3>
+            약물치료
+            기분조절제들은 급성기 뿐만이 아니라 재발을 방지하는데도 효과가 있습니다. 최근 연구에 따르면 리튬, 발프로에이트 등은 신경세포를 재생해 주고 보호도 해주는 것으로 밝혀지고 있습니다. 그러나 약을
+            복용하더라도 약의 용량이 부족하거나 스트레스가 심하면 재발하는 경우도 있습니다.
+            인지치료
+            자신과 주변에서 일어나는 일들을 부적절하게 받아들이거나 처리하는 경향이 있습니다. 이를 교정함으로써 자신과 다른 사람, 외부 세계를 합리적으로 인식하고 대처하도록 교정하는 것이 인지치료입니다.
+        </div>
     </div>
-   
+
     <footer>
         <div class="inner">
             <div class="upper">
