--- a/schizophrenia.html
+++ b/schizophrenia.html
@@ -119,11 +119,15 @@
         </div>
     </section>
     <div>
-        조현병
-        예전에는 편견과 오해로 인해 “특별한 병”으로 받아 들여졌지만 이 질병은 치료가 되는 ‘뇌의 질환’입니다.
-즉 뇌의 활동이 장애를 받아 현식을 올바르게 판단하는 능력이 방해 받거나 감정의 통제와 올바른 의사결정을 할 수 없게 되어 좋은 인간관계를 유지하는 것이 어려워지는 질환입니다. 조현병은 100~200명 중에서 한 명이 걸리는 매우 흔한 병으로서, 사춘기에서 30대까지의 사이에 발병률이 높습니다.
-원인
-생물학적인 요인
+        <div class="summary">
+            <h3>조현병</h3>
+            예전에는 편견과 오해로 인해 “특별한 병”으로 받아 들여졌지만 이 질병은 치료가 되는 ‘뇌의 질환’입니다.
+            즉 뇌의 활동이 장애를 받아 현식을 올바르게 판단하는 능력이 방해 받거나 감정의 통제와 올바른 의사결정을 할 수 없게 되어 좋은 인간관계를 유지하는 것이 어려워지는 질환입니다. 조현병은 100~200명 중에서 한 명이 걸리는 매우 흔한 병으로서, 사춘기에서 30대까지의 사이에 발병률이 높습니다.
+        </div>
+        <hr>
+        <div class="cause">
+                <h3>원인</h3>
+                생물학적인 요인
 뇌 안에는 신경전달 물질이라는 여러 종류의 생화학 물질이 있습니다. 이러한 신경전달 물질은 인간의 생각, 지각, 행동 등 모든 것을 뇌 안에서 정해진 통로를 통해 전달해주게 되는데 조현병은 신경 전달 물질의 균형이 깨짐으로 발생합니다.
 유전적 요인
 조현병 환자의 형제 혹은 자녀에서 발병할 확률은 5~15%로 일반인보다 10배 높은 것으로 알려져 있습니다. 하지만 이것은 조현병이 유전병이라는 의미는 아니며 다만 유전적 영향을 어느정도 받을 수 있다는 뜻입니다.
@@ -131,42 +135,47 @@
 극심한 스트레스는 조현병을 발병시키는 요인이기도 하고, 이미 병에 결린 사람의 증상을 악화시키기도 합니다.
 가족관계 요인
 부모의 양육태도나 의사소통상의 문제는 조현병의 발병과 직접적인 관계는 없으나 가족들끼리 서로 지나치게 비난하거나 참견이 많거나 가정 내 긴장수준이 높으면 조현병 환자의 증상이 악화되거나 재발될 수 있습니다.
-증상
-양성증상
-망상
-현상에 잘못된 의미를 부여하거나 한쪽으로 치우친 독단적인 생각
-환각
-환각은 외부의 자극이 없는데도 감각을 통해 어떤 자극을 느끼는 것으로 가장 흔한 것은 환청입니다.
-일관성
-없는 행동과 침착성의 결여 : 목적에 합당한 동작을 하지 못하고 같은 행동을 반복하거나 한 자세를 그대로 유지합니다. 또는 불안해하고 안절부절 못합니다.
-감정의 불안정성
-과민하고 사소한 일에 화를 내거나 혼란스러워 합니다.
-음성증상
-사고 내용의 비관화
-대화의 내용과 양이 줄고, 대화가 멈추거나 대답이 느려집니다.
-감정의 둔마
-감정 표현이 빈곤해지고 정서나 도덕심이 저하하는 정도에서, 희로애락의 감정 반응이 소실되는 것입니다. 또한 의욕이 줄어들어 학업이나 일을 계속하지 못합니다. 종일 게으름만 피웁니다.
-폐쇄성
-주변의 일에 관심이 없어지고, 비활동적이 됩니다.
-주의, 집중력의 장애
-산만해지고 집중력이 저하됩니다.
-치료
-약물치료
-조현병 치료의 가장 기본으로서 항정신병약이라고 불립니다. 뇌 속에서 일어나는 정보 전달 기능의 혼란을 개선함으로서 증상을 억제할 수 있는 것으로 생각되고 있습니다. 그러므로 조현병 치료에 있어서 약물은 중요하며 복용 및 중단은 반드시 정신과 전문의와 상의하여야 합니다.
-정신치료
-정기적인 면담을 통해 환자와 치료자가 공감하고 이해하는 치료적인 관계를 형성하여 환자의 현실감을 회복시키고 환자의 문제해결 능력을 키울 수 있도록 지지하고 격려해 주는 것이 필요합니다.
-가족교육
-환자뿐만 아니라 가족들도 질병에 대해 알 수 있도록 도와야 하고 증상에 대해 적절한 대처를 할 수 있도록 교육해야 합니다.
-정신재활치료
-약물치료를 받고 있어도 무기력, 무표정, 대인관계 회피 같은 증상들은 호전되지 않을 수 있으며, 이런 증상들은 병이 진행될수록 심해지기 때문에 전문적인 정신재활치료가 필요합니다.
-약물치료 부작용
-구갈, 배뇨장애, 변비
-손발, 턱, 혀가 굳어서 움직일 수 없음
-동작의 유연성이 없어짐
-손이나 몸치 규칙적으로 떨림
-몸이 안정되지 않아 가만히 앉아 있지 못함, 안절부절함
-성욕감퇴, 무월경, 체중증가
-
+        </div>
+        <hr>
+        <div class="symptom">
+            <h3>증상</h3>
+            양성증상
+            망상
+            현상에 잘못된 의미를 부여하거나 한쪽으로 치우친 독단적인 생각
+            환각
+            환각은 외부의 자극이 없는데도 감각을 통해 어떤 자극을 느끼는 것으로 가장 흔한 것은 환청입니다.
+            일관성
+            없는 행동과 침착성의 결여 : 목적에 합당한 동작을 하지 못하고 같은 행동을 반복하거나 한 자세를 그대로 유지합니다. 또는 불안해하고 안절부절 못합니다.
+            감정의 불안정성
+            과민하고 사소한 일에 화를 내거나 혼란스러워 합니다.
+            음성증상
+            사고 내용의 비관화
+            대화의 내용과 양이 줄고, 대화가 멈추거나 대답이 느려집니다.
+            감정의 둔마
+            감정 표현이 빈곤해지고 정서나 도덕심이 저하하는 정도에서, 희로애락의 감정 반응이 소실되는 것입니다. 또한 의욕이 줄어들어 학업이나 일을 계속하지 못합니다. 종일 게으름만 피웁니다.
+            폐쇄성
+            주변의 일에 관심이 없어지고, 비활동적이 됩니다.
+            주의, 집중력의 장애
+            산만해지고 집중력이 저하됩니다.
+        </div>
+        <div class="treatment">
+            <h3>치료</h3>
+            약물치료
+            조현병 치료의 가장 기본으로서 항정신병약이라고 불립니다. 뇌 속에서 일어나는 정보 전달 기능의 혼란을 개선함으로서 증상을 억제할 수 있는 것으로 생각되고 있습니다. 그러므로 조현병 치료에 있어서 약물은 중요하며 복용 및 중단은 반드시 정신과 전문의와 상의하여야 합니다.
+            정신치료
+            정기적인 면담을 통해 환자와 치료자가 공감하고 이해하는 치료적인 관계를 형성하여 환자의 현실감을 회복시키고 환자의 문제해결 능력을 키울 수 있도록 지지하고 격려해 주는 것이 필요합니다.
+            가족교육
+            환자뿐만 아니라 가족들도 질병에 대해 알 수 있도록 도와야 하고 증상에 대해 적절한 대처를 할 수 있도록 교육해야 합니다.
+            정신재활치료
+            약물치료를 받고 있어도 무기력, 무표정, 대인관계 회피 같은 증상들은 호전되지 않을 수 있으며, 이런 증상들은 병이 진행될수록 심해지기 때문에 전문적인 정신재활치료가 필요합니다.
+            약물치료 부작용
+            구갈, 배뇨장애, 변비
+            손발, 턱, 혀가 굳어서 움직일 수 없음
+            동작의 유연성이 없어짐
+            손이나 몸치 규칙적으로 떨림
+            몸이 안정되지 않아 가만히 앉아 있지 못함, 안절부절함
+            성욕감퇴, 무월경, 체중증가
+        </div>
     </div>
    
     <footer>
