--- a/depression.html
+++ b/depression.html
@@ -119,39 +119,48 @@
         </div>
     </section>
     <div>
-        우울증이란 ‘정신과의 감기’라고 할 정도로 흔한 병입니다. 남자보다 여자가 더 잘 발병하고 적어도 평생에 한번은 우울증에 걸린다고 합니다. 그러나 우울증을 병으로 인식하고 치료를 받는 사람은 약 10%정도 밖에 안됩니다.
-원인
-생물학적인 요인
-신경전달물질의 불균형으로 우울증이 발병할 수 있습니다.
-유전적 요인
-우울증이 있는 부모나 형제가 있는 경우 우울증에 걸릴 확률이 높으나 병 자체가 유전되는 것은 아니므로 우울증 환자 가족이 모두 우울증에 걸리는 것은 아닙니다.
-생활사건과 환경적 스트레스
-사랑하는 사람의 죽음, 이별, 외로움, 실직, 경제적인 걱정 등의 생활산건은 우울증을 일으키는 원인이 되기도 합니다.
-신체질환
-신체적인 질환이 우울증의 직접적인 원인이 되기도 하나 반대로 우울증이 환자의 신체를 약화시켜 병에 걸리는 경우도 있습니다.
-알코올과 약물요인
-때때로 우울증은 일부 고혈압, 결핵약, 피임약, 이뇨제나 두통약 등과 같은 특정 약물의 부작용으로 발생하기도 합니다. 특히 다른 약물과 술을 같이 마시게 되면 우울증이 더욱 악화될 수 있습니다.
-증상
-청소년기 우울증
-흔히 20대 후반이나 40대 초반이 우울증에 걸리기 쉬운 나이라고 생각하지만 최근에는 청소년기에 더욱 많이 나타나고 있습니다. 특히 왕따 문화가 성행하는 요즘 우울증이 심해지고 치료시기를 놓치게 되면 자살로 이어질 가능성이 매우 높습니다.
-여성 우울증
-갱년기 우울증(폐경기를 전후로 한 40~50대 주부에게서 주로 발생하며 초조하고 안절부절하며 건강에 대한 염려가 많아지고 후회, 책임감, 절망감, 의심 등의 증상이 나타납니다.), 산후 우울증, 월경 전 불쾌기분장애 등의 우울증상이 있습니다.
-남성(갱년기) 우울증
-명예퇴직, 감원, 사회실패 등 사회적 위치 변화로 인해 스스로의 인생에 대한 낮은 성취감, 인생에 대한 회의가 올 수 있으며 이는 우울증으로 연결되는 경우가 많습니다.
-노인 우울증
-노년기 우울증은 낮은 사회경제적 상태, 배우자 상실, 동반되는 신체질환 및 사회적 고립 등과 관련이 있습니다. 노인들은 우울하다는 감정표현보다는 신체증상을 더 많이 호소하기 때문에 우울증의 가능성을 항상 고려해야 합니다.
-
-치료
-약물치료
-우울증의 약으로서 항우울제를 복용합니다. 최소 4~5주간 적절한 용량을 투여해야하며 재발 방지를 위해 정상적인 기분으로 회복된 이후에도 4~9개월간은 항 우울제를 계속 복용해야 합니다.
-정신치료
-지지적 정신치료 : 환자가 스스로 문제를 해결할 수 있도록 전문가는 조언이나 격려 등을 면담을 통하여 제공하게 됩니다.
-인지치료 : 긍정적인 사고로 문제를 다룰 수 있도록 능력을 개발하는데 중점을 둡니다.
-행동치료 : 사람들의 행동은 배우고 훈련된 결과라고 보는 관점에서 출발하는 치료방법으로 활동 및 사회적 기술을 향상시켜 긍정적인 경험을 얻도록 합니다
-집단치료 : 여러 명이 함께 모여 치료하는 방식으로 여러 사람의 경험을 함께 나눌 수 있고 서로 정서적으로 지지해 주기도 합니다.
-대인관계훈련 : 사회적 대인관계 기술을 향상시켜 주위 사람들과 잘 지내도록 하는데 초점을 맞추고 있습니다.
-
-    </div>
+        <div class="summary">
+            <h3>우울증</h3>
+            우울증이란 ‘정신과의 감기’라고 할 정도로 흔한 병입니다. 남자보다 여자가 더 잘 발병하고 적어도 평생에 한번은 우울증에 걸린다고 합니다. 그러나 우울증을 병으로 인식하고 치료를 받는 사람은 약 10%정도 밖에 안됩니다.
+        </div>
+        <hr>
+        <div class="cause">
+                <h3>원인</h3>
+                생물학적인 요인
+                신경전달물질의 불균형으로 우울증이 발병할 수 있습니다.
+                유전적 요인
+                우울증이 있는 부모나 형제가 있는 경우 우울증에 걸릴 확률이 높으나 병 자체가 유전되는 것은 아니므로 우울증 환자 가족이 모두 우울증에 걸리는 것은 아닙니다.
+                생활사건과 환경적 스트레스
+                사랑하는 사람의 죽음, 이별, 외로움, 실직, 경제적인 걱정 등의 생활산건은 우울증을 일으키는 원인이 되기도 합니다.
+                신체질환
+                신체적인 질환이 우울증의 직접적인 원인이 되기도 하나 반대로 우울증이 환자의 신체를 약화시켜 병에 걸리는 경우도 있습니다.
+                알코올과 약물요인
+                때때로 우울증은 일부 고혈압, 결핵약, 피임약, 이뇨제나 두통약 등과 같은 특정 약물의 부작용으로 발생하기도 합니다. 특히 다른 약물과 술을 같이 마시게 되면 우울증이 더욱 악화될 수 있습니다.
+        </div>
+        <hr>
+        <div class="symptom">
+            <h3>증상</h3>
+            청소년기 우울증
+            흔히 20대 후반이나 40대 초반이 우울증에 걸리기 쉬운 나이라고 생각하지만 최근에는 청소년기에 더욱 많이 나타나고 있습니다. 특히 왕따 문화가 성행하는 요즘 우울증이 심해지고 치료시기를 놓치게 되면 자살로 이어질 가능성이 매우 높습니다.
+            여성 우울증
+            갱년기 우울증(폐경기를 전후로 한 40~50대 주부에게서 주로 발생하며 초조하고 안절부절하며 건강에 대한 염려가 많아지고 후회, 책임감, 절망감, 의심 등의 증상이 나타납니다.), 산후 우울증, 월경 전 불쾌기분장애 등의 우울증상이 있습니다.
+            남성(갱년기) 우울증
+            명예퇴직, 감원, 사회실패 등 사회적 위치 변화로 인해 스스로의 인생에 대한 낮은 성취감, 인생에 대한 회의가 올 수 있으며 이는 우울증으로 연결되는 경우가 많습니다.
+            노인 우울증
+            노년기 우울증은 낮은 사회경제적 상태, 배우자 상실, 동반되는 신체질환 및 사회적 고립 등과 관련이 있습니다. 노인들은 우울하다는 감정표현보다는 신체증상을 더 많이 호소하기 때문에 우울증의 가능성을 항상 고려해야 합니다.
+        </div>
+        <div class="treatment">
+            <h3>치료</h3>
+            약물치료
+            우울증의 약으로서 항우울제를 복용합니다. 최소 4~5주간 적절한 용량을 투여해야하며 재발 방지를 위해 정상적인 기분으로 회복된 이후에도 4~9개월간은 항 우울제를 계속 복용해야 합니다.
+            정신치료
+            지지적 정신치료 : 환자가 스스로 문제를 해결할 수 있도록 전문가는 조언이나 격려 등을 면담을 통하여 제공하게 됩니다.
+            인지치료 : 긍정적인 사고로 문제를 다룰 수 있도록 능력을 개발하는데 중점을 둡니다.
+            행동치료 : 사람들의 행동은 배우고 훈련된 결과라고 보는 관점에서 출발하는 치료방법으로 활동 및 사회적 기술을 향상시켜 긍정적인 경험을 얻도록 합니다
+            집단치료 : 여러 명이 함께 모여 치료하는 방식으로 여러 사람의 경험을 함께 나눌 수 있고 서로 정서적으로 지지해 주기도 합니다.
+            대인관계훈련 : 사회적 대인관계 기술을 향상시켜 주위 사람들과 잘 지내도록 하는데 초점을 맞추고 있습니다.
+        </div>
+   </div>
    
     <footer>
         <div class="inner">
